tests/NormalTests/paczka1/fuzzy1/31624221.err
Error in line 3: PgVwrl8v1G3 A278 29,3
Error in line 7: nETr0syF S804 31,6
Error in line 2: 97rEJP7dj S804 41,4
Error in line 26: nETr0syF S436 51,2
Error in line 27: PgVwrl8v1G3 A278 94,2
Error in line 31: nETr0syF S804 22,2
